/*
 * Copyright 2014 Instituto de Sistemas e Robotica, Instituto Superior Tecnico
 *
 * This file is part of RoAH RSBB Comm.
 *
 * RoAH RSBB Comm is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * RoAH RSBB Comm is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with RoAH RSBB Comm.  If not, see <http://www.gnu.org/licenses/>.
 */

package roah_rsbb_msgs;

option java_package = "eu.rockin.roah_rsbb_msgs";
option java_outer_classname = "RoahRsbbBeaconProtos";

message RoahRsbbBeacon {
  enum CompType {
    COMP_ID  = 6666;
    MSG_TYPE = 10;
  }

  // The teams that should be active benchmarking
  repeated BenchmarkingTeam benchmarking_teams = 1;
}

message BenchmarkingTeam {
  enum CompType {
    COMP_ID  = 6666;
    MSG_TYPE = 11;
  }

  // The team name that should be benchmarking
  required string team_name = 1;

  // The specific robot in the team
  required string robot_name = 2;

  // The RSBB port to connect the private channel
  required uint32 rsbb_port = 3;
}
